third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/control/comment-del.stderr
TOML parse error at line 1, column 27
  |
1 | comment-del  = "0x7f"   # 
  |                           ^
expected newline, `#`
